# polymarket-trading-bot

./: .env.example  .gitignore  Cargo.toml  README.md
src/: arbitrage_detector.rs  bot.rs  clients.rs  event.rs  event_matcher.rs  lib.rs  main.rs  polymarket_blockchain.rs  position_tracker.rs  settlement_checker.rs  trade_executor.rs
